Breakdown, machine, sparepart controller add. Spring security config with PreAuthorize annotations. Role hierarchy implementation